--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint src --ext .tsx, .ts",
+    "link:fix": "npx eslint src --ext .tsx, .ts --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
